Fixed Navbar overflow issue

--- a/src/components/styling/Navbar.css
+++ b/src/components/styling/Navbar.css
@@ -3,6 +3,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1.75em 3em;
+  gap: 1em;
 }
 
 nav .logo {
@@ -17,7 +18,7 @@ nav .link-wrapper {
   align-items: center;
   justify-content: center;
   gap: 1em;
-  height: 1.5em;
+  height: fit-content;
 }
 
 nav a {
